[tool.poetry]
name = "uniswap-python"
version = "0.7.0"
description = "An unofficial Python wrapper for the decentralized exchange Uniswap"
repository = "https://github.com/shanefontaine/uniswap-python"
readme = "README.md"
keywords = ["uniswap", "ethereum", "exchange", "trading"]
authors = [
    "Shane Fontaine <shane6fontaine@gmail.com>",
    "Erik Bjäreholt <erik@bjareho.lt>",
]
license = "MIT"
packages = [{ include = "uniswap" }]
include = ["uniswap/assets/*.abi", "uniswap/assets/*/*.abi"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.scripts]
unipy = "uniswap:main"

[tool.poetry.dependencies]
python = "^3.7.2"
web3 = { version = "^6.0", allow-prereleases = true }
click = "^8.0.3"
python-dotenv = "*"
typing-extensions = "*"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]
mypy = "*"
black = "*"
pytest = "^6.0"
pytest-cov = "*"
pytest-dotenv = "*"
flake8 = "*"
Sphinx = "*"
sphinx-book-theme = "*"
sphinx-click = "*"
pydata-sphinx-theme = "0.13.1" # due to: https://github.com/executablebooks/sphinx-book-theme/issues/711
isort = "5.11"
flake8-pyproject = "^1.2.3"    # Adds support for pyproject.toml


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3
combine_as_imports = true
force_alphabetical_sort_within_sections = true
overwrite_in_place = true
skip_glob = []

[tool.flake8]
max-line-length = 100

[tool.pytest.ini_options]
log_cli = false # to print logs during tests, set to true
#log_level = "NOTSET"

[tool.ruff]
ignore = ["E402", "E501"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
